Fix broken style on blog page

--- a/app/_scss/_postb146.scss
+++ b/app/_scss/_postb146.scss
@@ -5,8 +5,6 @@
   height: 8rem;
   line-height: 8rem;
   vertical-align: middle;
-
-  //font-family: "Montserrat", sans-serif;
   font-size: 2.6rem;
   font-weight: 700;
   color: white;
@@ -22,176 +20,178 @@
   }
 }
 
-/* Header */
-/* based on http://tympanus.net/Development/ArticleIntroEffects/index3.html */
-/* Trigger Button */
-/* Conent */
-/* -------------------------- */
-/* Sliced */
-/* based on http://tympanus.net/Development/ArticleIntroEffects/index3.html
-/* -------------------------- */
-/* Delays */
+.post-template {
+  /* Header */
+  /* based on http://tympanus.net/Development/ArticleIntroEffects/index3.html */
+  /* Trigger Button */
+  /* Conent */
+  /* -------------------------- */
+  /* Sliced */
+  /* based on http://tympanus.net/Development/ArticleIntroEffects/index3.html
+  /* -------------------------- */
+  /* Delays */
 
-.blog-menu .mobile-menu a {
-  color: white;
-
-  &:hover {
-    color: white;
-  }
-}
-
-.post-header {
-  position: relative;
-  margin: 0 auto;
-  min-height: 56rem;
-  width: 100%;
-
-  .post-menu-header {
-    width: 100%;
-    height: 8rem;
-    background-color: black;
-    color: white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-
-    .blog-logo {
-      display: inline-block;
-      max-height: 8rem;
-
-      img {
-        max-height: 8rem;
-      }
-    }
-  }
-}
-
-.bg-img {
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -webkit-backface-visibility: hidden;
-
-  img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    min-width: 100%;
-    min-height: 100%;
-    max-width: none;
-  }
-}
-
-.post-title {
-  z-index: 1000;
-  margin: 0 auto;
-  padding: 0 2em;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-
-  &.background--light h1 {
-    color: white;
-  }
-
-  &.background--dark h1 {
-    color: white;
-  }
-
-  a {
+  .blog-menu .mobile-menu a {
     color: white;
 
     &:hover {
-      color: $teal;
+      color: white;
     }
   }
 
-  h1 {
-    color: white;
-    font-weight: 800;
-    font-size: 4rem;
-    margin: 0 auto;
-    line-height: 1.1;
-    text-transform: uppercase;
-  }
-}
-
-button.trigger {
-  position: fixed;
-  bottom: 4rem;
-  left: 50%;
-  z-index: 5000;
-  display: block;
-  margin-left: -8px;
-  padding: 0;
-  width: 1em;
-  height: 1em;
-  border: none;
-  background: transparent;
-  color: transparent;
-  font-size: 2em;
-  cursor: pointer;
-
-  &.background--light::before,
-  &.background--light span::before {
-    color: white;
-  }
-
-  &.background--dark::before,
-  &.background--dark span::before {
-    color: white;
-  }
-
-  &:before {
-    position: absolute;
-    bottom: 100%;
-    left: -200%;
-    padding: 0.8em;
-    width: 500%;
-    color: white;
-    content: attr(data-info);
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    -webkit-backface-visibility: hidden;
-  }
-
-  &:focus {
-    outline: none;
-  }
-
-  span {
+  .post-header {
     position: relative;
-    display: block;
-    overflow: hidden;
+    margin: 0 auto;
+    min-height: 56rem;
     width: 100%;
-    height: 100%;
 
-    &:before {
+    .post-menu-header {
+      width: 100%;
+      height: 8rem;
+      background-color: black;
+      color: white;
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      z-index: 9999;
+
+      .blog-logo {
+        display: inline-block;
+        max-height: 8rem;
+
+        img {
+          max-height: 8rem;
+        }
+      }
+    }
+  }
+
+  .bg-img {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-backface-visibility: hidden;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      min-width: 100%;
+      min-height: 100%;
+      max-width: none;
+    }
+  }
+
+  .post-title {
+    z-index: 1000;
+    margin: 0 auto;
+    padding: 0 2em;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    &.background--light h1 {
+      color: white;
+    }
+
+    &.background--dark h1 {
+      color: white;
+    }
+
+    a {
       color: white;
 
-      // chevron-down
-      content: "\f123";
-      text-transform: none;
-      font-weight: normal;
-      font-style: normal;
-      font-variant: normal;
-      line-height: 1;
-      speak: none;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
+      &:hover {
+        color: $teal;
+      }
+    }
+
+    h1 {
+      color: white;
+      font-weight: 800;
+      font-size: 4rem;
+      margin: 0 auto;
+      line-height: 1.1;
+      text-transform: uppercase;
+    }
+  }
+
+  button.trigger {
+    position: fixed;
+    bottom: 4rem;
+    left: 50%;
+    z-index: 5000;
+    display: block;
+    margin-left: -8px;
+    padding: 0;
+    width: 1em;
+    height: 1em;
+    border: none;
+    background: transparent;
+    color: transparent;
+    font-size: 2em;
+    cursor: pointer;
+
+    &.background--light::before,
+    &.background--light span::before {
+      color: white;
+    }
+
+    &.background--dark::before,
+    &.background--dark span::before {
+      color: white;
+    }
+
+    &:before {
+      position: absolute;
+      bottom: 100%;
+      left: -200%;
+      padding: 0.8em;
+      width: 500%;
+      color: white;
+      content: attr(data-info);
+      font-size: 1.8rem;
+      text-transform: uppercase;
+      -webkit-backface-visibility: hidden;
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+    span {
+      position: relative;
+      display: block;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+
+      &:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        color: white;
+
+        // chevron-down
+        content: "\f123";
+        text-transform: none;
+        font-weight: normal;
+        font-style: normal;
+        font-variant: normal;
+        line-height: 1;
+        speak: none;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
     }
   }
 }
@@ -282,7 +282,7 @@ button.trigger {
     transform: translateY(200px);
 
     //opacity: 0;
- 
+
   }
 
   &:not(.notrans) {
